--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,5 +7,5 @@ on:
 
 jobs:
   echo_rep_n:
-    name: Test github.repository names
+    name: Test github.repository names2
     uses: Srmrlt/Action-test/.github/workflows/test.yml@main
